Bug 1528447 - Long source domains should get truncated with ellipsis (#5041)

--- a/content-src/styles/_activity-stream.scss
+++ b/content-src/styles/_activity-stream.scss
@@ -139,6 +139,7 @@ input {
   -webkit-box-orient: vertical;
   display: -webkit-box;
   overflow: hidden;
+  word-break: break-word;
 }
 
 // Components
